# poetry-project-structure

./: .gitignore  README.md  pyproject.toml
poetry_project_structure/: __main__.py
