[tool.poetry]
name = "poetry-project-structure"
version = "0.1.0"
description = "An example Python project structure."
authors = ["Kelvin Ducray <kelvin.ducray@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
